--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ img {
     border: 2px dotted red;
 }
 
-#selected-bg {
+#overlay {
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
