--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,7 @@
 }
 
 img {
-    display: block
-}
-
-.img-container img {
+    display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -60,4 +57,13 @@ img {
     position: absolute;
     top: 16px;
     right: 16px;
+}
+
+#img-show {
+    width: 800px;
+    aspect-ratio: 1/1;
+    position: absolute;
+    left: 50%;
+    margin: -400px 0 0 -400px;
+    top: 50%
 }
