--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,17 @@
 .my-card {
     background-color: white;
     padding: var(--personal_spacing);
-    position: relative
+    position: relative;
+    transition:
+        rotate 0.5s,
+        box-shadow 0.5s ease
+}
+
+.my-card:hover {
+    border: 1px solid black;
+    rotate: 10deg;
+    box-shadow: 10px 10px 10px black;
+    z-index: 2
 }
 
 .pin {
