--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,18 @@
     background-image: url(../img/wall.png);
 }
 
+.header-container {
+    position: relative;
+    padding: var(--personal_spacing);
+}
+
+#regen {
+    position: absolute;
+    top: 50%;
+    left: calc(100% - var(--personal_spacing));
+    transform: translate(-100%, -50%);
+}
+
 .main-content {
     background-image: url(../img/cork.png);
 }
@@ -89,5 +101,4 @@ img {
 .content {
     display: flex;
     flex-direction: column;
-    height: 100vh;
 }
