--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
     --personal_spacing: 10px;
     --bs-body-font-family: "Quicksand", sans-serif;
+    --my-bg-color: rgba(0, 0, 0, 0.5)
 }
 
 .main-header {
@@ -25,6 +26,10 @@
 
 h1 {
     font-family: "Sour Gummy", sans-serif;
+}
+
+#form-container {
+    background-color: var(--my-bg-color);
 }
 
 .my-card {
@@ -76,7 +81,7 @@ img {
 #overlay {
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--my-bg-color);
     position: fixed;
     z-index: 9998;
 }
